tests/baselines/reference/scannerNumericLiteral4(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
scannerNumericLiteral4.ts(1,3): error TS1124: Digit expected.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== scannerNumericLiteral4.ts (1 errors) ====
    1e
      
!!! error TS1124: Digit expected.